# cv_pro

./: .gitignore  README.md  pyproject.toml
cv_pro/: __init__.py  __main__.py  cli.py  ehalf.py  export_csv.py  file_parse.py  file_picker.py  plots.py  process.py  root_directory.pickle  segment.py  voltammogram.py
cv_pro/commands/: _command.py  _parsers.py  _registry.py  config.py  multiview.py  process.py  tree.py
cv_pro/io/: export_csv.py  parse_bin.py
cv_pro/scripts/: cli.py  multiview.py
cv_pro/utils/: _defaults.py  _rich.py  _validate.py  config.py  filepicker.py  helpers.py  paths.py  prompts.py
docs/: cli.rst  conf.py  config.rst  export_csv.rst  file_parse.rst  file_picker.rst  filepaths.rst  filepicker.rst  index.rst  installation.rst  modules.rst  multiview.rst  plots.rst  process.rst  quickstart.rst
