[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cv_pro"
version = "0.0.6"
authors = [
  { name="David Hebert", email="david@ddhebert.com" },
]
description = "Tools for processing CH Instruments ch760e electrochemical analyzer data files."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Matplotlib",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Utilities",
]
keywords = [
  'CV',
  'cyclic voltammetry',
  'electrochemistry',
  'redox',
  'CH Instruments',
  'ch760e',
  'binary',
  '.bin',
  '.bin',
  '.CSV',
  '.csv',
  'tool',
  'processing',
  'peaks',
  'e half',
  'import',
  'export'
]
dependencies = [
  "numpy>=1.21.6",
  "pandas>=1.5.2",
  "matplotlib>=3.6.2",
  "simplefilepicker@git+https://github.com/dd-hebert/simple-filepicker.git"
]

[project.scripts]
cvp = "cv_pro.cli:main"

[project.urls]
"repository" = "https://github.com/dd-hebert/cv_pro"
"bug tracker" = "https://github.com/dd-hebert/cv_pro/issues"